# PPIUS_Projekt

ppius/: CMakeLists.txt  package.xml
ppius/include/ppius/: compress_node.h  decompress_node.h  filter_library.h  wav_reader.h
ppius/launch/: hp_coefficients.txt  launch_all_nodes.launch
ppius/src/: compress_node.cpp  decompress_node.cpp  fp_coefficients.txt  play_sound.py  read_wav.py  wav_reader.cpp
ppius_msg/: CMakeLists.txt  package.xml
ppius_msg/msg/: compress.msg  sound.msg
